feat: 로직 추가 및 수정